Automated whitespace cleanup
To fix files indented with spaces when they should use tabs, but the automated process
apparently made some other changes.